# hrml

./: .gitignore  Cargo.toml  README.md
markup_parser/: Cargo.toml
markup_parser/src/: lib.rs  main.rs  node.rs  parser.rs
src/: README.md  lib.rs  wasm.rs
src/node/: node.rs
src/parser/: block.rs  html.rs  inline.rs  mod.rs  parser.rs  patterns.rs
web/: index.html  package-lock.json  package.json
web/css/: styles.css
web/js/: config.js  main.js
web/js/core/: Editor.js  Parser.js  State.js
web/js/utils/: events.js  export.js  helpers.js
web/wasm/: markup_parser.d.ts  markup_parser.js  markup_parser_bg.wasm  markup_parser_bg.wasm.d.ts  package.json
