[package]
name = "markup_parser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1.7"
regex = "1.5"
html-escape = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
