[package]
name = "markup_parser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
regex = { version = "1.5", features = ["unicode-perl"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
html-escape = "0.2.13"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1.7"
